[gd_scene load_steps=18 format=3 uid="uid://bv08q7vhmsh3"]

[ext_resource type="Script" path="res://Mob.gd" id="1_vy4c5"]
[ext_resource type="Texture2D" uid="uid://c145y5m7kej6t" path="res://assets/Main Characters/Mask Dude/Idle (32x32).png" id="1_w0ov4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p5ril"]
atlas = ExtResource("1_w0ov4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu280"]
atlas = ExtResource("1_w0ov4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynkr"]
atlas = ExtResource("1_w0ov4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a5af"]
atlas = ExtResource("1_w0ov4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8u8n"]
atlas = ExtResource("1_w0ov4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2urrn"]
atlas = ExtResource("1_w0ov4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_th1fo"]
atlas = ExtResource("1_w0ov4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgr68"]
atlas = ExtResource("1_w0ov4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlwhf"]
atlas = ExtResource("1_w0ov4")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq05g"]
atlas = ExtResource("1_w0ov4")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53igw"]
atlas = ExtResource("1_w0ov4")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_osdmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5ril")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu280")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a5af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8u8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2urrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th1fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgr68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlwhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq05g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53igw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31h8x"]
size = Vector2(51, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7eyrg"]
size = Vector2(63, 67)

[sub_resource type="CircleShape2D" id="CircleShape2D_h05kg"]
radius = 233.137

[node name="Mob" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
script = ExtResource("1_vy4c5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_osdmo")
autoplay = "default"
frame_progress = 0.627406

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2(2.5, 4)
shape = SubResource("RectangleShape2D_31h8x")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_7eyrg")

[node name="Area2D" type="Area2D" parent="hitbox"]
position = Vector2(1, 2)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox/Area2D"]
visible = false
light_mask = 0
shape = SubResource("CircleShape2D_h05kg")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="hitbox/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="hitbox/Area2D" to="." method="_on_area_2d_body_exited"]
